; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_sqlite.c_svn_sqlite__with_lock.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_sqlite.c_svn_sqlite__with_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_sqlite__with_lock(i32* %0, i32 (i8*, i32*, i32*)* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32 (i8*, i32*, i32*)*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 (i8*, i32*, i32*)* %1, i32 (i8*, i32*, i32*)** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32 (i8*, i32*, i32*)*, i32 (i8*, i32*, i32*)** %6, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = call i32 %9(i8* %10, i32* %11, i32* %12)
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @SVN_SQLITE__WITH_LOCK(i32 %13, i32* %14)
  %16 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %16
}

declare dso_local i32 @SVN_SQLITE__WITH_LOCK(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
